fixed issue in width of responsive spacing control

--- a/assets/sass/spacing.scss
+++ b/assets/sass/spacing.scss
@@ -141,6 +141,7 @@
 
 .premium-spacing-responsive-wrapper {
     margin-right: 6px;
+    width: 100%;
 }
 
 input {
